php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #76922 FastCGI terminates connection immediately after FCGI_GET_VALUES
Submitted: 2018-09-23 15:02 UTC Modified: -
From: webmaster_20180923 at cubiclesoft dot com Assigned:
Status: Closed Package: FPM related
PHP Version: 7.2.10 OS: N/A
Private report: No CVE-ID: None
 [2018-09-23 15:02 UTC] webmaster_20180923 at cubiclesoft dot com
Description:
------------
Sending a valid FCGI_GET_VALUES record results in a valid FCGI_GET_VALUES_RESULT response BUT the connection is terminated immediately afterwards.  If a FastCGI enabled application wants to know what the limits of the FastCGI server are before beginning to make requests, then this behavior requires two separate FastCGI connections - one to obtain the information and another to make the actual request.  In addition, the conditions of a general-purpose FastCGI server can change between connections.  FCGI_GET_VALUES is not considered to be an actual request as it is a management record type AND the FastCGI specification mandates that the client drives server connection/disconnection (not the other way around).  As a result, PHP's behavior is not compliant with the FastCGI spec.

Test script:
---------------
Analysis:  The fcgi_read_request() function returns 0 back to the caller (fcgi_accept_request()) when handling FCGI_GET_VALUES.  That, in turn, results in calling fcgi_close(), which terminates the connection.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2023-11-03 14:08 UTC] git@php.net
Automatic comment on behalf of bukka
Revision: https://github.com/php/php-src/commit/e3d1beb0f18255cf1965d69b7456907c643aa9ff
Log: Fix bug #76922: FastCGI terminates conn after FCGI_GET_VALUES
 [2023-11-03 14:08 UTC] git@php.net
-Status: Open +Status: Closed
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 29 12:00:02 2026 UTC