Fix bug #76922: FastCGI terminates conn after FCGI_GET_VALUES

Closes GH-12387